refactor: refactor shouldNotRaiseIfIsFirstRound test to use mock